Use Fetch Method to display Message

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -162,6 +162,11 @@
         <p style="text-align:center" >Click here to get a random fact about me:</p>
         <button onclick="addRandomFact()">Want a fact about me?</button>
         <div id="greeting-container"></div>
+
+        <h1>Comments</h1>
+        <p>Click here to see a random comment:</p>
+        <button onclick="getRandomQuoteUsingArrowFunctions()">Comments!</button>
+        <div id="comment-container"></div>
     </div>
   </body>
 </html>
